Fix build: add memory and direct next build command

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
-  "buildCommand": "npm run build",
-  "framework": "nextjs"
+  "buildCommand": "next build",
+  "installCommand": "npm install",
+  "framework": "nextjs",
+  "build": {
+    "env": {
+      "NODE_OPTIONS": "--max_old_space_size=4096"
+    }
+  }
 }
